# Connect6PlayAgent

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  connect6.proto  docker-compose.yml  generate_pb.sh  ia_connect6  leeme.md
agente_cpp/: Dockerfile  agente-connecta6.cpp  ia_connect6.cpp
include/: agent.hpp  board.hpp
src/: agent.cpp  board.cpp  main.cpp
